# app/Http/Requests/FamilyMember/ListDuplicateMemberRequest.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace App\Http\Requests\FamilyMember;
+
+use App\Http\Requests\ApiFormRequest;
+
+class ListDuplicateMemberRequest extends ApiFormRequest
+{
+    public function rules(): array
+    {
+        return [
+            'limit' => ['nullable', 'integer', 'min:1', 'max:100'],
+        ];
+    }
+}
